--- a/src/styles/ProductCard.css
+++ b/src/styles/ProductCard.css
@@ -30,8 +30,10 @@
   height: 170px;
   object-fit: cover;
   transition: transform 0.3s ease;
+  position: relative;
 }
 .product-card-wishlist-button {
+  all: unset;
   position: absolute;
   top: 10px;
   right: 10px;
@@ -46,7 +48,7 @@
   cursor: pointer;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s ease;
-  z-index: 1;
+  z-index: 5;
 }
 
 .product-card-wishlist-button:hover {
@@ -111,9 +113,15 @@
 .product-card-rating {
   display: flex;
   margin-bottom: 15px;
+  align-items: center;
+  gap: 1rem;
 }
 .product-card-rating svg{
   font-size: 1.8rem;
+}
+.no-reviews-text{
+  font-size: 1.2rem;
+  color: gray;
 }
 .product-manipulation {
   display: flex;
