--- a/src/styles/ProductDetailPage.css
+++ b/src/styles/ProductDetailPage.css
@@ -30,6 +30,7 @@
 .product-container {
   display: flex;
   background-color: var(--white-color);
+  position: relative;
 }
 @media screen and (max-width: 70em) {
   .product-container-col1 {
@@ -58,7 +59,7 @@
   justify-content: center;
   align-items: center;
 }
-.product-container-col1-img img{
+.product-container-col1-img img {
   width: 150px;
   max-height: 35rem;
 }
@@ -134,41 +135,31 @@
   text-transform: capitalize;
   color: gray;
 }
-.product-cont-col2-variations {
-  margin-top: 1rem;
-}
-.product-cont-col2-variations p {
-  font-weight: 700;
-  text-transform: uppercase;
-  font-size: 1.4rem;
-  margin-bottom: 1rem;
-}
-.variations {
+.product-detail-wishlist-button {
+  all: unset;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: rgba(133, 117, 117, 0.5);
+  border: none;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
   display: flex;
-  flex-wrap: wrap;
-  gap: 1rem;
-}
-.variations-card {
-  width: 5rem;
-  height: 5rem;
+  align-items: center;
+  justify-content: center;
   cursor: pointer;
-}
-.variations-card-clicked {
-  border: 1px solid var(--primary-color);
-  width: 5rem;
-  height: 5rem;
-  cursor: pointer;
-}
-.variations-card:hover {
-  border: 1px solid var(--primary-color);
-}
-.variations-card img,
-.variations-card-clicked img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s ease;
+  z-index: 5;
 }
 
+.product-detail-wishlist-button:hover {
+  transform: scale(1.1);
+}
+.product-detail-wishlist-button svg {
+  color: var(--primary-color);
+}
 .product-page-product-details,
 .product-page-product-specifications,
 .product-page-customer-feedback {
@@ -184,7 +175,7 @@
   text-transform: capitalize;
   font-weight: 600;
 }
-.no-reviews{
+.no-reviews {
   min-height: 20rem;
   display: flex;
   justify-content: center;
@@ -192,7 +183,7 @@
   flex-direction: column;
   gap: 1rem;
 }
-.no-reviews svg{
+.no-reviews svg {
   font-size: 5rem;
   color: var(--border-color);
 }
@@ -337,7 +328,7 @@
   position: sticky;
   top: 100px;
   /* right: 4rem; */
-  height: 49rem;
+  height: fit-content;
 }
 @media screen and (max-width: 70em) {
   .product-page-wrapper-col2 {
@@ -415,12 +406,13 @@
   cursor: pointer;
   text-transform: capitalize;
 }
-.product-page-loading-container, .product-page-error-container{
+.product-page-loading-container,
+.product-page-error-container {
   height: 85vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.product-page-error-container h3{
+.product-page-error-container h3 {
   color: var(--primary-color);
 }
