--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -15,6 +15,8 @@
   --danger-color: #dc3545;
   --warning-color: #ffc107;
   --info-color: #17a2b8;
+  --failed-color: red;
+  --shipped-color: indigo;
 }
 
 * {
