--- a/src/styles/CheckoutPage.css
+++ b/src/styles/CheckoutPage.css
@@ -19,7 +19,8 @@
   gap: 30px;
 }
 .customer-info,
-.delivery-details {
+.delivery-details,
+.payment-method {
   background-color: var(--background-light);
   border-radius: 8px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
@@ -41,6 +42,7 @@
   display: flex;
   flex-direction: column;
   gap: 15px;
+  padding-inline: 1rem;
 }
 .info-content {
   display: flex;
@@ -56,8 +58,11 @@
   font-weight: 600;
   width: 80px;
   color: var(--text-light);
+  font-size: 1.4rem;
 }
-
+.info-value{
+  font-size: 1.4rem;
+}
 .subsection-header {
   display: flex;
   justify-content: space-between;
@@ -96,6 +101,9 @@
   background-color: var(--background-light);
   padding: 1rem 0.5rem;
   border-radius: 4px;
+}
+.address-display p{
+  font-size: 1.4rem;
 }
 .edit-shipping-address-form-actions {
   display: flex;
@@ -188,10 +196,12 @@
 
 .shipment-item-price {
   font-weight: 600;
+  font-size: 1.4rem;
 }
 
 .shipment-item-quantity {
   color: var(--text-light);
+  font-size: 1.4rem;
 }
 
 .order-summary {
