--- a/src/styles/LoginPage.css
+++ b/src/styles/LoginPage.css
@@ -51,6 +51,11 @@
   cursor: pointer;
   text-transform: capitalize;
 }
+.forgot-password{
+  text-align: end;
+  margin-top: 0rem;
+  font-size: 1.2rem;
+}
 .divider {
   display: flex;
   align-items: center;
