modify auth pages styles

--- a/src/styles/RegisterPage.css
+++ b/src/styles/RegisterPage.css
@@ -10,8 +10,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0rem 1.2rem;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+  padding: 1.2rem;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 @media screen and (max-width: 62.5em) {
   .registration-page-wrapper form {
