--- a/src/styles/LoginPage.css
+++ b/src/styles/LoginPage.css
@@ -12,7 +12,8 @@
   flex-direction: column;
   align-items: center;
   padding: 1.2rem;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+;
 }
 @media screen and (max-width: 62.5em) {
   .login-page-wrapper form {
