--- a/src/styles/RegisterPage.css
+++ b/src/styles/RegisterPage.css
@@ -4,6 +4,7 @@
   justify-content: center;
   align-items: center;
 }
+
 .registration-page-wrapper form {
   background-color: var(--background-color);
   width: 60%;
@@ -13,28 +14,21 @@
   padding: 1.2rem;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
-@media screen and (max-width: 62.5em) {
-  .registration-page-wrapper form {
-    width: 80%;
-  }
-}
-@media screen and (max-width: 37.5em) {
-  .registration-page-wrapper form {
-    width: 90%;
-  }
-}
+
 .registration-form-title {
   font-size: 2rem;
   font-weight: 800;
   margin-bottom: 1rem;
   color: var(--primary-color);
 }
+
 .registration-form-body {
   width: 100%;
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
 }
+
 .signup-btn {
   padding-block: 1.2rem;
   background-color: var(--primary-color);
@@ -43,16 +37,30 @@
   cursor: pointer;
   text-transform: capitalize;
   font-size: 1.4rem;
-  transition: color 0.3s ease;
+  transition: background-color 0.3s ease;
 }
-.signup-btn:hover{
+
+.signup-btn:hover {
   background-color: var(--primary-dark);
 }
+
 .login-text {
   font-size: 1.4rem;
   margin-top: 0.5rem;
 }
+
 .login-text a {
   color: var(--primary-color);
 }
 
+@media screen and (max-width: 62.5em) {
+  .registration-page-wrapper form {
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 37.5em) {
+  .registration-page-wrapper form {
+    width: 90%;
+  }
+}
