--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -5,6 +5,13 @@
   margin-top: 30px;
 }
 
+.container {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
 .footer-content {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -42,6 +49,10 @@
   background-color: var(--primary-color);
 }
 
+.social-icons svg {
+  font-size: 1.6rem;
+}
+
 .footer-section.links ul {
   list-style: none;
   padding: 0;
@@ -67,9 +78,8 @@
   gap: 10px;
 }
 
-.footer-section.contact span {
-  margin-right: 10px;
-  display: inline-block;
+.footer-section.contact svg {
+  font-size: 1.6rem;
 }
 
 .footer-bottom {
