--- a/src/styles/ProductCard.css
+++ b/src/styles/ProductCard.css
@@ -26,12 +26,14 @@
   justify-content: center;
   align-items: center;
 }
+
 .product-card-image img {
   height: 170px;
   object-fit: cover;
   transition: transform 0.3s ease;
   position: relative;
 }
+
 .product-card-wishlist-button {
   all: unset;
   position: absolute;
@@ -54,15 +56,18 @@
 .product-card-wishlist-button:hover {
   transform: scale(1.1);
 }
-.product-card-wishlist-button svg{
+
+.product-card-wishlist-button svg {
   color: var(--primary-color);
 }
+
 .product-card-content {
   padding: 10px;
   flex-grow: 1;
   display: flex;
   flex-direction: column;
 }
+
 .product-card-product-name {
   color: var(--text-color);
   font-size: 1.8rem;
@@ -116,13 +121,16 @@
   align-items: center;
   gap: 1rem;
 }
-.product-card-rating svg{
+
+.product-card-rating svg {
   font-size: 1.8rem;
 }
-.no-reviews-text{
+
+.no-reviews-text {
   font-size: 1.2rem;
   color: gray;
 }
+
 .product-manipulation {
   display: flex;
   gap: 10px;
@@ -182,6 +190,18 @@
   font-weight: 600;
 }
 
+.out-of-stock-label {
+  position: absolute;
+  bottom: 10px;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  text-align: center;
+  padding: 5px;
+  font-weight: 600;
+}
+
 @media (max-width: 768px) {
   .product-card-image {
     height: 180px;
@@ -191,22 +211,22 @@
     padding: 12px;
   }
 
-  .product-name {
-    font-size: 0.9rem;
+  .product-card-product-name {
+    font-size: 1.6rem;
   }
 
-  .current-price {
-    font-size: 1rem;
+  .current-price-of-product {
+    font-size: 1.7rem;
   }
 
-.product-card-add-to-cart {
+  .product-card-add-to-cart {
     padding: 8px;
-    font-size: 0.9rem;
+    font-size: 1.4rem;
   }
 }
 
 @media (max-width: 480px) {
-  .product-actions {
+  .product-manipulation {
     flex-direction: column;
   }
 
