--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -19,7 +19,7 @@
   width: 25%;
 }
 
-.logo a {
+.logo div {
   font-family: "Merienda", cursive;
   text-transform: capitalize;
   font-size: 2.5rem;
