--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -213,7 +213,7 @@
     flex-wrap: wrap;
   }
   .logo {
-    width: 50%;
+    flex: 1;
   }
   .search-bar {
     width: 100%;
@@ -221,7 +221,7 @@
     margin: 10px 0px;
   }
   .header-icons {
-    width: 100%;
+    flex: 1;
     order: 2;
   }
 }
