--- a/src/styles/ProductDetailPage.css
+++ b/src/styles/ProductDetailPage.css
@@ -7,16 +7,16 @@
 }
 
 .product-page-wrapper-col1 {
-  background-color: var(--background-light);
+  background-color: var(--white-color);
   width: 72.5%;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 1.5rem;
 }
 
 .product-container {
+  background-color: var(--background-light);
   display: flex;
-  background-color: var(--white-color);
   position: relative;
 }
 
@@ -125,7 +125,7 @@
 .product-page-product-details,
 .product-page-product-specifications,
 .product-page-customer-feedback {
-  background-color: var(--white-color);
+  background-color: var(--background-light);
 }
 
 .product-page-product-details-title,
@@ -390,11 +390,11 @@
   .product-page-wrapper {
     flex-direction: column;
   }
-  
+
   .product-page-wrapper-col1 {
     width: 100%;
   }
-  
+
   .product-page-wrapper-col2 {
     position: unset;
     width: 100%;
@@ -411,31 +411,36 @@
   .product-container {
     flex-direction: column;
   }
-  
+
   .product-container-col1 {
     width: 100%;
     height: 35rem;
     display: flex;
     justify-content: center;
   }
-  
+
   .product-container-col1-img {
     width: 100%;
     height: 100%;
   }
-  
+
   .product-container-col2 {
     width: 100%;
   }
-  
+
   .product-page-product-specifications-body {
     flex-direction: column;
   }
-  
+
+  .key-features,
+  .whats-in-the-box {
+    width: 100%;
+  }
+
   .customer-feedback-body {
     flex-direction: column;
   }
-  
+
   .customer-feedback-col1,
   .customer-feedback-col2 {
     width: 100%;
