--- a/src/styles/CustomerPage.css
+++ b/src/styles/CustomerPage.css
@@ -1,11 +1,8 @@
-.customer-page main {
-  padding-block: 30px;
-}
-
 .customer-page-container {
   display: grid;
   grid-template-columns: 250px 1fr;
   gap: 30px;
+  padding-block: 4rem;
   padding-inline: 4rem;
 }
 
@@ -55,13 +52,19 @@
 @media (max-width: 768px) {
   .customer-page-container {
     grid-template-columns: 1fr;
+    padding-inline: 0;
   }
-  
+  .customer-sidebar {
+    background-color: var(--white-color);
+  }
   .customer-nav {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
   }
-  
+  .customer-sidebar h2 {
+    display: none;
+  }
   .customer-nav a {
     flex: 1;
     text-align: center;
