--- a/src/styles/WishlistPage.css
+++ b/src/styles/WishlistPage.css
@@ -49,7 +49,9 @@
   gap: 20px;
   border-bottom: 1px solid var(--border-color);
 }
-
+.wishlist-item:last-child{
+  border-bottom: none;
+}
 .wishlist-item.out-of-stock {
   opacity: 0.7;
 }
