--- a/src/styles/CustomerPage.css
+++ b/src/styles/CustomerPage.css
@@ -1,3 +1,6 @@
+.customer-page{
+  width: 100vw;
+}
 .customer-page-container {
   display: grid;
   grid-template-columns: 250px 1fr;
@@ -68,6 +71,7 @@
   .customer-nav a {
     flex: 1;
     text-align: center;
-    min-width: 120px;
+    min-width: 90px;
+    font-size: 1.4rem;
   }
 }
